# Excel-Sheet-Matching-Agent

./: README.md  main.py  pyproject.toml
data/document_intelligence/json/: 出典サンプル.json
data/document_intelligence/markdown/: 出典サンプル.md
examples/: 計算シートサンプル.xlsx  計算シートサンプル_matching.csv
src/excel_sheet_matching_agent/: __init__.py  analyze_local_pdf.py  load_xlsx.py  load_xlsx_llm.py  markup.py  matching.py  models.py  prompts.py
tests/: test_load_xlsx_llm.py
